# syn-test-2

./: Cargo.toml  README.md
crate1/: Cargo.toml
crate1/src/: lib.rs
crate2/src/: lib.rs
crate3/: Cargo.toml
crate3/src/: lib.rs
dev_tools/string-optimizer/: Cargo.toml
dev_tools/string-optimizer/src/: main.rs  types.rs  yaml_processor.rs
dev_tools/string-optimizer/src/extractors/: log_extractor.rs  mod.rs  std_output_extractor.rs
dev_tools/text-optimizer/: clap_text_list.yml  log_text_list.yml  std_output_text_list.yml  thiserror_text_list.yml
dev_tools/text-optimizer/src/: backfill.rs  main.rs  types.rs  yaml_processor.rs
dev_tools/text-optimizer/src/extractors/: clap_extractor.rs  log_extractor.rs  mod.rs  std_output_extractor.rs  thiserror_extractor.rs
src/: main.rs
util/crate4/: Cargo.toml
