[package]
name = "syn-test-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4" }

[workspace]
members = [
    "crate1",
    "crate2",
    "crate3",
    "util/crate4"
]
exclude = ["dev_tools/string-optimizer"]
